--- a/1_NanoStrandSeq/config_C57DBA.yaml
+++ b/1_NanoStrandSeq/config_C57DBA.yaml
@@ -11,8 +11,8 @@ threads: 12
 table: data/NanoStrandSeq.xls
 fasta: /home/chenzonggui/species/mus_musculus/GRCm38.p6/GRCm38.canonical.genome.fa
 sizes: /home/chenzonggui/species/mus_musculus/GRCm38.p6/GRCm38.canonical.genome.sizes
-barcodes: ../1_NanoStrandSeq/data/nanopore_96_barcodes.fasta
-benchmark_vcf: ../public/GRCm38-C57-DBA-Variant-Calls/results/C57BL_6NJ_DBA_2J_GRCm38.mgp.v5.snps_indels.dbSNP142.vcf.gz
-benchmark_bed: ../public/GRCm38-C57-DBA-Variant-Calls/results/C57BL_6NJ_DBA_2J_GRCm38.mgp.v5.snps_indels.dbSNP142.bed.gz
+barcodes: data/nanopore_96_barcodes.fasta
+benchmark_vcf: /home/chenzonggui/repositories/GRCm38_C57DBA_SNP_Indel/GRCm38_C57BL_6J_DBA_2J_SNP_Indel.vcf.gz
+benchmark_bed: /home/chenzonggui/repositories/GRCm38_C57DBA_SNP_Indel/GRCm38_C57BL_6J_DBA_2J_SNP_Indel.bed.gz
 mmi: /home/chenzonggui/species/mus_musculus/GRCm38.p6/GRCm38.canonical.mm2.map-ont.mmi
 min_reads: 50000
