--- a/1_NanoStrandSeq/config_HG001.yaml
+++ b/1_NanoStrandSeq/config_HG001.yaml
@@ -16,7 +16,7 @@ table: data/NanoStrandSeq.xls
 fasta: /home/chenzonggui/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.genome.fa
 sizes: /home/chenzonggui/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.genome.sizes
 barcodes: data/nanopore_96_barcodes.fasta
-benchmark_vcf: ../public/GRCh38-HG001-Variant-Calls/results/benchmark_autosomal_v4.2.1_chrx_v3.3.2.vcf.gz
-benchmark_bed: ../public/GRCh38-HG001-Variant-Calls/results/benchmark_autosomal_v4.2.1_chrx_v3.3.2.bed.gz
+benchmark_vcf: /home/chenzonggui/repositories/GRCh38_HG001_SNP_Indel/GRCh38_HG001_SNP_Indel.GIAB_v4.2.1_and_v3.3.2.vcf.gz
+benchmark_bed: /home/chenzonggui/repositories/GRCh38_HG001_SNP_Indel/GRCh38_HG001_SNP_Indel.GIAB_v4.2.1_and_v3.3.2.bed.gz
 mmi: /home/chenzonggui/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.mm2.map-ont.mmi
 min_reads: 50000
