--- a/2_StrandSeq/config.yaml
+++ b/2_StrandSeq/config.yaml
@@ -11,5 +11,4 @@ sizes: /home/chenzonggui/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.genome
 barcodes: data/nanopore_96_barcodes.fasta
 benchmark_vcf: /home/chenzonggui/repositories/GRCh38_HG001_SNP_Indel/GRCh38_HG001_SNP_Indel.GIAB_v4.2.1_and_v3.3.2.vcf.gz
 benchmark_bed: /home/chenzonggui/repositories/GRCh38_HG001_SNP_Indel/GRCh38_HG001_SNP_Indel.GIAB_v4.2.1_and_v3.3.2.bed.gz
-mmi: /home/chenzonggui/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.mm2.map-ont.mmi
-min_reads: 50000
+bwa_index: /home/chenzonggui/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.bwa.index
